# rust-project-template

./: Cargo.toml  Justfile  LICENSE-MIT
src/: lib.rs  main.rs
