[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Argument parser
clap = { version = "4.4.0", features = ["derive"] }
# Binary error handling
color-eyre = "0.6.2"
# Colored strings
owo-colors = "3.5.0"
# Library error types
thiserror = "1.0.47"
# Logging utilities
time = { version = "0.3.27", features = ["formatting"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "time"] }

# Build `backtrace` with optimizations for `color-eyre` performance
[profile.dev.package.backtrace]
opt-level = 3

[profile.production]
inherits = "release"
# Enable link time optimization
lto = true
# Strip symbols
strip = true
